syntax = "proto3";

package api;

service Api {
    rpc ScanIPAddr (ScanIPRequest) returns (ScanIPResponse);
}

message ScanIPRequest {
    string domainName = 1;
}

message ScanIPResponse {
    message ScanIPEntry {
        string ipAddr = 1;
    }
    repeated ScanIPEntry ipAddresses = 1;
}